; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/pae/extr_ieee802_1x_kay.c_ieee802_1x_kay_deinit_receive_sa.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/pae/extr_ieee802_1x_kay.c_ieee802_1x_kay_deinit_receive_sa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.receive_sa = type { i32, i32, i32* }

@MSG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"KaY: Delete receive SA(an: %hhu) of SC\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.receive_sa*)* @ieee802_1x_kay_deinit_receive_sa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ieee802_1x_kay_deinit_receive_sa(%struct.receive_sa* %0) #0 {
  %2 = alloca %struct.receive_sa*, align 8
  store %struct.receive_sa* %0, %struct.receive_sa** %2, align 8
  %3 = load %struct.receive_sa*, %struct.receive_sa** %2, align 8
  %4 = getelementptr inbounds %struct.receive_sa, %struct.receive_sa* %3, i32 0, i32 2
  %5 = load i32*, i32** %4, align 8
  %6 = call i32 @ieee802_1x_kay_deinit_data_key(i32* %5)
  %7 = load %struct.receive_sa*, %struct.receive_sa** %2, align 8
  %8 = getelementptr inbounds %struct.receive_sa, %struct.receive_sa* %7, i32 0, i32 2
  store i32* null, i32** %8, align 8
  %9 = load i32, i32* @MSG_DEBUG, align 4
  %10 = load %struct.receive_sa*, %struct.receive_sa** %2, align 8
  %11 = getelementptr inbounds %struct.receive_sa, %struct.receive_sa* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @wpa_printf(i32 %9, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i32 %12)
  %14 = load %struct.receive_sa*, %struct.receive_sa** %2, align 8
  %15 = getelementptr inbounds %struct.receive_sa, %struct.receive_sa* %14, i32 0, i32 0
  %16 = call i32 @dl_list_del(i32* %15)
  %17 = load %struct.receive_sa*, %struct.receive_sa** %2, align 8
  %18 = call i32 @os_free(%struct.receive_sa* %17)
  ret void
}

declare dso_local i32 @ieee802_1x_kay_deinit_data_key(i32*) #1

declare dso_local i32 @wpa_printf(i32, i8*, i32) #1

declare dso_local i32 @dl_list_del(i32*) #1

declare dso_local i32 @os_free(%struct.receive_sa*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
